srcMyCoreApp/main/default/objects/Treatment__c/Treatment__c.object-meta.xml
<CustomObject>
    <label>Treatment</label>
    <nameField>
        <label>Treatment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Treatments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>