srcMyCoreApp/main/default/objects/Treatment__c/fields/Treatment_Area__c.field-meta.xml
<CustomField>
    <fullName>Treatment_Area__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Treatment Area</label>
    <referenceTo>Treatment_Area__c</referenceTo>
    <relationshipLabel>Treatments</relationshipLabel>
    <relationshipName>Treatments</relationshipName>
    <type>Lookup</type>
</CustomField>