srcMyCoreApp/main/default/objects/Treatment__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Oncology</fullName>
            </value>
            <value>
                <fullName>Rare Disease</fullName>
            </value>
            <value>
                <fullName>Gastrointestinal</fullName>
            </value>
            <value>
                <fullName>Inflammation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>